--- a/tools-account/package.json
+++ b/tools-account/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "git-action-cross-account-cicd-prereq",
+  "name": "aws-cross-account-cicd-git-actions-prereq",
   "version": "0.1.0",
   "bin": {
-    "git-action-cross-account-cicd-prereq": "dist/app.js"
+    "aws-cross-account-cicd-git-actions-prereq": "dist/app.js"
   },
   "scripts": {
     "build": "npm run clean && tsc",
@@ -12,15 +12,14 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.31.0",
     "@aws-cdk/aws-iam": "^1.31.0",
-    "@aws-cdk/aws-s3": "^1.31.0",
+    "@aws-cdk/aws-secretsmanager": "^1.31.0",
     "@aws-cdk/core": "^1.31.0",
     "@types/node": "^13.7.7",
     "aws-cdk": "^1.31.0",
     "rmdir-cli": "^2.0.6",
+    "source-map-support": "^0.5.16",
     "ts-node": "^8.1.0",
-    "typescript": "~3.7.2",
-    "source-map-support": "^0.5.16"
+    "typescript": "~3.7.2"
   }
 }
